[package]
name = "local-sns-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0"
tracing = "0"
tracing-subscriber = "0.3"
dashmap = "6"

quick-xml = { version = "0.39.0", features = ["serde"] }
aws-sdk-sqs = "1.92.0"
aws-config = "1.8.12"
url = "2.5.8"
